link-canonical, link-canonical-derive: WIP TODO: the explain
Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -67,6 +67,9 @@ path = "../librad"
 [dependencies.link-canonical]
 path = "../link-canonical"
 
+[dependencies.link-canonical-derive]
+path = "../link-canonical-derive"
+
 [dependencies.link-git-protocol]
 path = "../link-git-protocol"
 features = ["git2"]
