--- a/link-canonical/Cargo.toml
+++ b/link-canonical/Cargo.toml
@@ -12,6 +12,7 @@ doctest = false
 test = false
 
 [dependencies]
+nom = "7.0"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 serde_bytes = "0.11"
