librad::git::tracking: WIP integrate link-tracking
Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/librad/Cargo.toml
+++ b/librad/Cargo.toml
@@ -99,6 +99,10 @@ features = ["git2"]
 [dependencies.link-identities]
 path = "../link-identities"
 
+[dependencies.link-tracking]
+path = "../link-tracking"
+features = ["cjson"]
+
 [dependencies.radicle-data]
 path = "../data"
 features = ["minicbor"]
