--- a/link-tracking/Cargo.toml
+++ b/link-tracking/Cargo.toml
@@ -7,14 +7,16 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 bstr = "0.2"
+multihash = "0.11"
 thiserror = "1.0"
-
-[dependencies.git-repository]
-version = "0.11.0"
+tracing = "0.1"
 
 [dependencies.link-canonical]
 path = "../link-canonical"
 features = [ "derive" ]
+
+[dependencies.cob]
+path = "../cob"
 
 [dependencies.link-crypto]
 path = "../link-crypto"
@@ -24,3 +26,6 @@ path = "../link-identities"
 
 [dependencies.radicle-git-ext]
 path = "../git-ext"
+
+[dependencies.radicle-macros]
+path = "../macros"
