librad: WIP wire up tracking
Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/librad/Cargo.toml
+++ b/librad/Cargo.toml
@@ -103,6 +103,9 @@ features = ["git2"]
 [dependencies.link-identities]
 path = "../link-identities"
 
+[dependencies.link-tracking]
+path = "../link-tracking"
+
 [dependencies.radicle-data]
 path = "../data"
 features = ["minicbor"]
