--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -29,6 +29,9 @@ features = [ "json-value" ]
 [dependencies.librad]
 path = "../librad"
 
+[dependencies.link-tracking]
+path = "../link-tracking"
+
 [dependencies.radicle-git-ext]
 path = "../git-ext"
 
