--- a/rad-identities/Cargo.toml
+++ b/rad-identities/Cargo.toml
@@ -36,6 +36,9 @@ features = ["vendored"]
 [dependencies.librad]
 path = "../librad"
 
+[dependencies.link-tracking]
+path = "../link-tracking"
+
 [dependencies.radicle-git-ext]
 path = "../git-ext"
 
