--- a/rad-profile/Cargo.toml
+++ b/rad-profile/Cargo.toml
@@ -19,6 +19,9 @@ structopt = "0.3"
 [dependencies.librad]
 path = "../librad"
 
+[dependencies.node-lib]
+path = "../node-lib"
+
 [dependencies.rad-clib]
 path = "../rad-clib"
 
