lnk-seed: crate-ify seed code
Since the git-server won't be depending on node-lib we separate out
the seed related code from node-lib into cli/lnk-seed. This will allow
git-server to use the seed file storage in a later feature.

Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/node-lib/Cargo.toml
+++ b/node-lib/Cargo.toml
@@ -48,6 +48,10 @@ features = ["std", "derive"]
 path    = "../cli/lnk-clib"
 version = "0.1.0"
 
+[dependencies.lnk-seed]
+path    = "../cli/lnk-seed"
+version = "0.1.0"
+
 [dependencies.lnk-thrussh-agent]
 version  = "0.1.0"
 features = [ "tokio-agent" ]
