git-server: request-pull and replicate hooks
WIP

Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/git-server/Cargo.toml
+++ b/git-server/Cargo.toml
@@ -32,6 +32,7 @@ features = ["vendored-libgit2"]
 
 [dependencies.librad]
 path = "../librad"
+features = ["replication-v3"]
 
 [dependencies.link-async]
 path = "../link-async"
