--- a/cli/linkd-lib/Cargo.toml
+++ b/cli/linkd-lib/Cargo.toml
@@ -27,6 +27,7 @@ rand                = "0.8"
 thiserror           = "1.0"
 tempfile            = "3.3"
 tokio               = { version = "1.13", default-features = false, features = [ "fs", "io-std", "macros", "process", "rt-multi-thread", "signal" ] }
+tokio-stream        = "0.1.9"
 tracing             = { version = "0.1", default-features = false, features = [ "attributes", "std" ] }
 
 [dependencies.clap]
